--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,33 @@ body{
   max-width: 100%;
   height: auto;
 }
+
+.ProductCardIMG {
+  object-fit: cover;
+}
+.ProductCardSide{
+  width: 100%;
+  height: 14.2rem;
+}
+/* small laptop */
+@media only screen and (max-width: 1024px) {
+  .ProductCardSide{
+    height: 10.8rem;
+  }
+}
+
+/* tablet */
+@media only screen and (max-width: 768px) {
+  .ProductCardSide{
+    height: 7.5rem;
+  }
+}
+
+
+/* mobile */
+@media only screen and (max-width: 600px) {
+  .ProductCardSide{
+    max-width: 100%;
+    height: auto;
+  }
+}
