--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,18 @@ body{
   width: 100%;
   height: 14.2rem;
 }
+
+/* ProjectIntro Styles */
+
+.greenBorder{
+  height:2px;
+  width: 15rem;
+  color:gray;
+  background-color:gray
+}
+
+
+
 /* small laptop */
 @media only screen and (max-width: 1024px) {
   .ProductCardSide{
